kubernetes/webportal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql
  strategy: { }
  template:
    metadata:
      labels:
        io.kompose.network/webportal-default: "true"
        io.kompose.service: postgresql
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: postgres
          image: postgres
          name: portaldb
          ports:
            - containerPort: 5432
          resources: { }
      restartPolicy: Always
status: { }

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: postgresql
  name: postgresql
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: postgresql
status:
  loadBalancer: { }

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: { }
  template:
    metadata:
      labels:
        io.kompose.network/webportal-default: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: password
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://PostgreSQL:5432/postgres
            - name: SPRING_DATASOURCE_USERNAME
              value: postgres
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: web-portal.jar
          name: portalweb
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources: { }
      restartPolicy: Always
status: { }

---

apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: web
  name: web
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
      nodePort: 30001
  selector:
    io.kompose.service: web
status:
  loadBalancer: { }

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webportal-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/webportal-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/webportal-default: "true"
